Feito nesse commit: - Adição de autorização em todos os Controllers. - Criação de muitos métodos referentes a busca pelo idCurso e na resposta idQuestao - Adição do email no usuário para uma ferramenta que pode vir a existir futuramente.
TODO:
- Resolver problema do GET usuários.
- Ver questão da senha e seu retorno no cadastro.
- Alterar de H2 para SQL.
- Trabalhar no sistema de pontos.